--- a/src/FTKEYBOARD.IO/FTKEYBOARD.IO.csproj
+++ b/src/FTKEYBOARD.IO/FTKEYBOARD.IO.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{563592D0-838D-4501-A9EE-0043C7CA304D}</ProjectGuid>
+    <ProjectGuid>{9E9853B4-5316-4977-AE16-EEBDAF81D0DE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FTKEYBOARD.Application</RootNamespace>
-    <AssemblyName>FTKEYBOARD.Application</AssemblyName>
+    <RootNamespace>FTKEYBOARD.IO</RootNamespace>
+    <AssemblyName>FTKEYBOARD.IO</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
@@ -41,26 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Kernel.cs" />
+    <Compile Include="FTBinaryReader.cs" />
+    <Compile Include="FTBinaryWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\lib\inputsimulator\WindowsInput\WindowsInput.csproj">
-      <Project>{3549CD6F-80F8-450F-B99E-CF0A736B1F2A}</Project>
-      <Name>WindowsInput</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\FTKEYBOARD.IO\FTKEYBOARD.IO.csproj">
-      <Project>{9E9853B4-5316-4977-AE16-EEBDAF81D0DE}</Project>
-      <Name>FTKEYBOARD.IO</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\FTKEYBOARD.Net\FTKEYBOARD.Net.csproj">
-      <Project>{DAF9371B-F5C6-4D43-A7CC-79EE276355E4}</Project>
-      <Name>FTKEYBOARD.Net</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\FTKEYBOARD.Protocol\FTKEYBOARD.Protocol.csproj">
-      <Project>{6E1EBB69-E9F4-4998-941A-A8161C8EB1B4}</Project>
-      <Name>FTKEYBOARD.Protocol</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
